--- a/sections/validation.tex
+++ b/sections/validation.tex
@@ -197,7 +197,7 @@ In order to provide a tabular representation of the results it's necessary to as
     \end{itemize}
 \end{itemize}
 
-\begin{figure}[H]
+\begin{table}%[H]
     \centering
     \begin{tabular}{|c|c|c|c|c|c|c|}
         \hline
@@ -217,7 +217,7 @@ In order to provide a tabular representation of the results it's necessary to as
     \end{tabular}
     \caption{Models training results}
     \label{fig:results}
-\end{figure}
+\end{table}
 
 About these results is possible to make some considerations:
 \begin{enumerate}
