--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -11,5 +11,9 @@ The implications of these divergent outcomes extend beyond the scope of this the
 
 Secondly, this work suggests an expansion of the workflow to include additional steps, injecting fairness and ethical concepts at multiple stages. This holistic approach may involve scrutinizing data acquisition, refining feature engineering, and scrutinizing post-processing decisions. Analyzing the impact of injecting fairness considerations into these dimensions could provide a more nuanced understanding of the interplay between algorithmic decisions and ethical outcomes.
 
+\section{Future work}
+
+This basis represents a basis for a new approach in AI development where the fairness is considered in each step of the development process. It would be interesting to develop new fairness algorithms, so acting on the \emph{Algorithm Design} step of the workflow. More specifically it would be interesting to study new algorithmic approaches for both \emph{in-processing} and \emph{post-processing} adopting, considering the \emph{in-processing} approaches based on Deep Learning to evaluate the performance when the fairness is injected into a DL algorithm.
+
 In conclusion, this thesis not only contributes insights into the Fair-by-Design paradigm but also beckons further exploration. It serves as a clarion call for ongoing research endeavors to unravel the intricacies of fairness in algorithmic decision-making. As technology advances, the ethical imperative to understand, implement, and refine Fair-by-Design approaches becomes increasingly paramount.
 
