--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -32,7 +32,7 @@
 
 \school{\unibo}
 \programme{Corso di Laurea Magistrale in Ingegneria e Scienze Informatiche}
-\title{Fair-by-design algoriths for access to education}
+\title{Fair-by-Design: An Ethical Workflow for Unbiased AI Development and Equitable Outcomes}
 \author{Antonio Iannotta}
 \date{\today}
 \subject{Intelligent Systems Engineering}
